tests/ui/const-generics/fn-item-as-const-arg.stderr
warning: the feature `min_generic_const_args` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/fn-item-as-const-arg.rs:3:12
   |
LL | #![feature(min_generic_const_args)]
   |            ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #132980 <https://github.com/rust-lang/rust/issues/132980> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: function items cannot be used as const arguments
  --> $DIR/fn-item-as-const-arg.rs:7:25
   |
LL | fn test<F>() where [(); func]: {}
   |                         ^^^^

error: aborting due to 1 previous error; 1 warning emitted

